# BANKING_FRAUD_DETECTION

./: .gitignore
backend/: package.json
backend/src/: app.js  server.js
backend/src/config/: db.js  logger.js  socket.js
backend/src/controllers/: account.controller.js  alert.controller.js  auth.controller.js  graph.controller.js  transaction.controller.js
backend/src/models/: User.js  (+6 more)
backend/tests/: alert.service.test.js  auth.test.js  engine.service.test.js  transaction.test.js
fraud-engine/: CMakeLists.txt
fraud-engine/src/: main.cpp  types.h
fraud-engine/src/detectors/: BalanceDrainDetector.cpp  BalanceDrainDetector.h  CycleDetector.cpp  CycleDetector.h  Detector.h  DormantActivityDetector.cpp  DormantActivityDetector.h  RiskPropagationDetector.cpp  RiskPropagationDetector.h  SmurfingDetector.cpp  SmurfingDetector.h  VelocityDetector.cpp  VelocityDetector.h
fraud-engine/src/engine/: FraudEngine.cpp  FraudEngine.h
fraud-engine/src/generators/: CycleGenerator.cpp  CycleGenerator.h  FraudRingGenerator.cpp  FraudRingGenerator.h  GeneratorBase.h  NormalUserGenerator.cpp  NormalUserGenerator.h  SmurfingGenerator.cpp  SmurfingGenerator.h
fraud-engine/src/graph/: TransactionGraph.cpp  TransactionGraph.h
fraud-engine/src/output/: AlertGenerator.cpp  AlertGenerator.h
fraud-engine/src/ranking/: TopKRanker.cpp  TopKRanker.h
fraud-engine/src/scoring/: RiskScorer.cpp  RiskScorer.h
fraud-engine/tests/: test_main.cpp
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
seed/: package.json  seed.js
(+47 files in other folders)
